--- a/mapa6.html
+++ b/mapa6.html
@@ -100,11 +100,11 @@
     </div>
 
     <div class="gallery">
-        <img src="img/inclusion.png" alt="Inclusión Comunitaria" class="thumbnail" onclick="openModal(this)">
-        <img src="img/professional.png" alt="Asesoría Profesional" class="thumbnail" onclick="openModal(this)">
-        <img src="img/resources.png" alt="Recursos Locales" class="thumbnail" onclick="openModal(this)">
-        <img src="img/family.png" alt="Participación Familiar" class="thumbnail" onclick="openModal(this)">
-        <img src="img/therapy.png" alt="Replicación de Terapias" class="thumbnail" onclick="openModal(this)">
+        <img src="inclusion.png" alt="Inclusión Comunitaria" class="thumbnail" onclick="openModal(this)">
+        <img src="professional.png" alt="Asesoría Profesional" class="thumbnail" onclick="openModal(this)">
+        <img src="resources.png" alt="Recursos Locales" class="thumbnail" onclick="openModal(this)">
+        <img src="family.png" alt="Participación Familiar" class="thumbnail" onclick="openModal(this)">
+        <img src="therapy.png" alt="Replicación de Terapias" class="thumbnail" onclick="openModal(this)">
     </div>
 
     <div id="imageModal" class="modal">
@@ -124,16 +124,16 @@
 
         // Agregar marcadores al mapa
         const images = [
-            { lat: -16.1901, lng: -67.7275, img: 'img/inclusion.png', text: 'Inclusión Comunitaria' },
-            { lat: -16.1895, lng: -67.7280, img: 'img/professional.png', text: 'Asesoría Profesional' },
-            { lat: -16.1888, lng: -67.7270, img: 'img/resources.png', text: 'Recursos Locales' },
-            { lat: -16.1910, lng: -67.7273, img: 'img/family.png', text: 'Participación Familiar' },
-            { lat: -16.1893, lng: -67.7268, img: 'img/therapy.png', text: 'Replicación de Terapias' },
+            { lat: -16.1901, lng: -67.7275, img: 'inclusion.png', text: 'Inclusión Comunitaria' },
+            { lat: -16.1895, lng: -67.7280, img: 'professional.png', text: 'Asesoría Profesional' },
+            { lat: -16.1888, lng: -67.7270, img: 'resources.png', text: 'Recursos Locales' },
+            { lat: -16.1910, lng: -67.7273, img: 'family.png', text: 'Participación Familiar' },
+            { lat: -16.1893, lng: -67.7268, img: 'therapy.png', text: 'Replicación de Terapias' },
             
             // Nuevos marcadores para Caranavi, Guanay y Teoponte
-            { lat: -15.7791, lng: -67.6967, img: 'img/img1.jpeg', text: 'Caranavi' },
-            { lat: -15.7670, lng: -67.4857, img: 'img/img2.jpeg', text: 'Guanay' },
-            { lat: -15.6444, lng: -67.9247, img: 'img/img3.jpeg', text: 'Teoponte' }
+            { lat: -15.7791, lng: -67.6967, img: 'img1.jpeg', text: 'Caranavi' },
+            { lat: -15.7670, lng: -67.4857, img: 'img2.jpeg', text: 'Guanay' },
+            { lat: -15.6444, lng: -67.9247, img: 'img3.jpeg', text: 'Teoponte' }
         ];
 
         images.forEach(item => {
